Fix announcement overflow (#377)

--- a/app/assets/stylesheets/duties.scss
+++ b/app/assets/stylesheets/duties.scss
@@ -120,6 +120,7 @@ h1 {
 
 .announcement-sidebar {
   display: block;
+  word-wrap: break-word;
 }
 
 .my-duty-cell {
